<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.jskingen.carlocation.activity.LoginActivity">

    <ImageView
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@mipmap/ic_launcher" />

    <com.jskingen.carlocation.common.view.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/et_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_login_username"
            android:singleLine="true" />

    </com.jskingen.carlocation.common.view.FloatLabeledEditText>

    <com.jskingen.carlocation.common.view.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_login_password"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.jskingen.carlocation.common.view.FloatLabeledEditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <CheckBox
            android:id="@+id/cb_record_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/login_user_password" />

        <CheckBox
            android:id="@+id/cb_show_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_show_password" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bt_selector_blue"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:text="@string/bt_login_login"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/bt_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:visibility="invisible"
                android:padding="5dp"
                android:text="@string/bt_login_regist"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_login_codename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textSize="12sp"
            android:text="v1.1" />
    </RelativeLayout>

</LinearLayout>
